--- a/Advertising (Multiple_Linear_Regression using Statsmodels).ipynb
+++ b/Advertising (Multiple_Linear_Regression using Statsmodels).ipynb
@@ -6,7 +6,7 @@
         "id": "z4YHaHdmTvSP"
       },
       "source": [
-        "## Multiple Linear Regression Model with Advertising Data stat"
+        "## Multiple Linear Regression Model with Advertising Data"
       ]
     },
     {
