--- a/Advertising (Multiple_Linear_Regression using Statsmodels).ipynb
+++ b/Advertising (Multiple_Linear_Regression using Statsmodels).ipynb
@@ -6,7 +6,7 @@
         "id": "z4YHaHdmTvSP"
       },
       "source": [
-        "## Multiple Linear Regression Model with Advertising Data"
+        "## Multiple Linear Regression Model with Advertising Data."
       ]
     },
     {
@@ -309,7 +309,7 @@
       },
       "source": [
         "## **Statistical Approach:**\n",
-        "# Introducting 'statsmodels'"
+        "# Introducting 'statsmodels'."
       ]
     },
     {
@@ -515,24 +515,6 @@
         "#### R-squared = R2 = Coefficient of Determination\n",
         "#### Df = Degree of Freedom"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fDfOtRJB7GV-"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "m_gph0iR7GV-"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
